--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,6 +48,7 @@
 {% endif %}
 {#         ///////        FIN    NAVBAR   ADMIN             ///////               #}
 {#         ///////         NAVBAR   PUBLIC             ///////               #}
+{% if is_granted('ROLE_USER') %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -76,6 +77,7 @@
         </div>
     </div>
 </nav>
+{% endif %}
 {#         ///////        FIN    NAVBAR    PUBLIC            ///////               #}
 <main class="container-fluid">
 
